Add styles for reference

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="dist/index.js" type="module"></script>
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Mulish&family=Playfair+Display&family=Smokum&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <ul id='list'></ul>
-  <form id="task-form">
-    <input type="text" id="task-input">
-    <button type="submit">Add Task</button>
-  </form>
-</body>
+  <div class="inner-body">
+    <ul id='list'></ul>
+    <form id="task-form">
+      <input type="text" id="task-input">
+      <button class="btn" type="submit">Add Task</button>
+    </form>
+  </div>
+  </body>
 </html>
