Pull tasks from local storage/ create function to clear checked items

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <body>
   <div class="inner-body">
     <ul id='list'></ul>
+    <button id='clear-task' class="btn">Clear Task</button>
     <form id="task-form">
       <input type="text" id="task-input">
       <button class="btn" type="submit">Add Task</button>
