--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
 <body>
   <div class="inner-body">
     <ul id='list'></ul>
-    <button id='clear-task' class="btn">Clear Task</button>
     <form id="task-form">
       <input type="text" id="task-input">
       <button class="btn" type="submit">Add Task</button>
     </form>
+    <button id='clear-task' class="btn">Clear List</button>
+    <button id='remove-item' class="btn">Remove Item</button>
   </div>
   </body>
 </html>
