Add spacing and adjust css

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,19 @@
 </head>
 <body>
   <div class="inner-body">
-    <ul id='list'></ul>
-    <form id="task-form">
-      <input type="text" id="task-input">
-      <button class="btn" type="submit">Add Task</button>
-    </form>
-    <button id='clear-task' class="btn">Clear List</button>
-    <button id='remove-item' class="btn">Remove Item</button>
+
+      <ul id='list'></ul>
+
+      <form id="task-form">
+        <input type="text" id="task-input">
+        <button class="btn" type="submit">Add Task</button>
+      </form>
+
+      <div class="buttons">
+        <button id='clear-task' class="btn">Clear List</button>
+        <button id='remove-item' class="btn">Remove Item</button>
+      </div>
+
   </div>
   </body>
 </html>
