Create button and input to create list names

--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,20 @@
 <body>
   <div class="inner-body">
 
-      <ul id='list'></ul>
+      <button id="create-new-list-btn" class="btn">Create New List</button>
 
+      <input id="List-title-input" type="text">
+      <button id-="create-list-name-btn" class="btn">Create list name</button>
+
+      <ul id='list'></ul>
       <form id="task-form">
         <input type="text" id="task-input">
         <button class="btn" type="submit">Add Task</button>
       </form>
-
+      
       <div class="buttons">
         <button id='clear-task' class="btn">Clear List</button>
-        <button id='remove-item' class="btn">Remove Item</button>
+        <button id='remove-item' class="btn">Remove Task</button>
       </div>
 
   </div>
